<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-134dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/partPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"

            android:layout_marginTop="120dp"
            android:text="@string/part_price_label"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isSubzeroLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/partPriceLabel"
            android:layout_alignLeft="@+id/partPriceLabel"
            android:layout_marginTop="50dp"

            android:text="@string/is_subzero_label"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/markupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/isSubzeroLabel"
            android:layout_alignLeft="@+id/isSubzeroLabel"
            android:layout_marginTop="30dp"

            android:text="@string/markup_label"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/markupLabel"
            android:layout_alignLeft="@+id/markupLabel"
            android:layout_marginTop="30dp"

            android:text="@string/total_label"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/partPriceEditText"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/partPriceLabel"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="112dp"

            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/part_price"
            android:textSize="15sp" />

        <Switch
            android:id="@+id/subzeroSwitch"
            android:layout_width="59dp"
            android:layout_height="44dp"
            android:layout_below="@+id/partPriceEditText"
            android:layout_alignLeft="@+id/isSubzeroLabel"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="-137dp"
            android:showText="true"
            android:textOff="@string/OFF"
            android:textOn="@string/ON"
            android:gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/markupTextView"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/markupLabel"
            android:layout_alignLeft="@+id/markupLabel"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/markup"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/markupTextView"
            android:layout_alignStart="@+id/totalLabel"
            android:layout_alignLeft="@+id/partPriceEditText"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/total"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>